<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"
        android:paddingEnd="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingStart="16dp"
        android:textColorHint="@color/input_login_hint">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint"
            android:textSize="20sp"
            android:theme="@style/EditTextTheme"/>
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"
        android:paddingEnd="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingStart="16dp"
        android:textColorHint="@color/input_login_hint">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint"
            android:textSize="20sp"
            android:theme="@style/EditTextTheme"/>
    </android.support.design.widget.TextInputLayout>

    <!-- Login Button -->
    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorAccent"
        android:text="@string/btn_login"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/btn_login_facebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/facebook"
        android:drawableLeft="@drawable/ic_facebook_icon"
        android:drawablePadding="-32dp"
        android:paddingBottom="16sp"
        android:paddingLeft="16dp"
        android:paddingTop="16sp"
        android:scaleType="fitXY"
        android:text="@string/login_with_facebook"
        android:textColor="@color/white"
        tools:ignore="RtlSymmetry"/>

    <android.support.percent.PercentFrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingStart="16dp">

        <!-- Link to Recovery Screen -->

        <Button
            android:id="@+id/btn_recovery"
            style="?android:buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:gravity="start|center_vertical"
            android:text="@string/recover_password"
            android:textColor="@color/input_login_hint"
            android:textSize="12sp"
            app:layout_widthPercent="50%"/>

        <!-- Link to Login Screen -->

        <Button
            android:id="@+id/btnLinkToRegisterScreen"
            style="?android:buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:gravity="end|center_vertical"
            android:text="@string/btn_register"
            android:textColor="@color/colorAccent"
            android:textSize="12sp"
            app:layout_marginLeftPercent="50%"
            app:layout_widthPercent="50%"/>

    </android.support.percent.PercentFrameLayout>

    <Button
        android:id="@+id/btn_anonymous_login"
        style="?android:buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="@string/log_in_anonymously"/>
</LinearLayout>