<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_img"
        android:gravity="center"
        android:text="@string/btn_link_to_register"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingBottom="60dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="30dp">

        <EditText
            android:id="@+id/fullname"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/border_top_and_bottom"
            android:hint="@string/hint_name"
            android:inputType="textCapWords"
            android:paddingBottom="15dp"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:paddingTop="5dp"
            android:singleLine="true"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint"
            android:textSize="20sp" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:id="@+id/email"
            android:background="@drawable/border_top_and_bottom"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:paddingBottom="15dp"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:paddingTop="5dp"
            android:singleLine="true"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint"
            android:textSize="20sp" />


        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_top_and_bottom"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:paddingBottom="15dp"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:paddingTop="5dp"
            android:singleLine="true"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@color/colorAccent"
            android:text="@string/btn_register"
            android:textColor="@color/white" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnLinkToRegisterScreen"
                style="?android:buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight=".5"
                android:gravity="start|center_vertical"
                android:paddingEnd="10dp"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:text="@string/btn_terms_and_conditions"
                android:textColor="@color/input_login_hint"
                android:textSize="12sp" />

            <!-- Link to Login Screen -->

            <Button
                android:id="@+id/btnLinkToLoginScreen"
                style="?android:buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight=".5"
                android:gravity="end|center_vertical"
                android:paddingEnd="10dp"
                android:paddingRight="10dp"
                android:paddingStart="10dp"
                android:text="@string/btn_link_to_login"
                android:textColor="@color/colorAccent"
                android:textSize="12sp" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>