<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_name"
        android:paddingEnd="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingStart="16dp"
        android:textColorHint="@color/input_login_hint">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/full_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:inputType="textCapWords"
            android:paddingBottom="15dp"
            android:paddingTop="5dp"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint"
            android:textSize="20sp"
            android:theme="@style/EditTextTheme"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"
        android:paddingEnd="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingStart="16dp"
        android:textColorHint="@color/input_login_hint">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:inputType="textEmailAddress"
            android:paddingBottom="15dp"
            android:paddingTop="5dp"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint"
            android:textSize="20sp"
            android:theme="@style/EditTextTheme"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"
        android:paddingEnd="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingStart="16dp"
        android:textColorHint="@color/input_login_hint">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:paddingBottom="15dp"
            android:paddingTop="5dp"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint"
            android:textSize="20sp"
            android:theme="@style/EditTextTheme"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnCreate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorAccent"
        android:text="@string/btn_register"
        android:textColor="@color/white"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingStart="16dp">

        <Button
            android:id="@+id/btnLinkToRegisterScreen"
            style="?android:buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight=".5"
            android:gravity="start|center_vertical"
            android:onClick="toTerms"
            android:paddingEnd="10dp"
            android:paddingLeft="10dp"
            android:paddingStart="10dp"
            android:text="@string/btn_terms_and_conditions"
            android:textColor="@color/input_login_hint"
            android:textSize="12sp"/>

        <!-- Link to Login Screen -->

        <Button
            android:id="@+id/btnLinkToLoginScreen"
            style="?android:buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight=".5"
            android:gravity="end|center_vertical"
            android:paddingEnd="10dp"
            android:paddingRight="10dp"
            android:paddingStart="10dp"
            android:text="@string/btn_link_to_login"
            android:textColor="@color/colorAccent"
            android:textSize="12sp"/>

    </LinearLayout>
</LinearLayout>